bugfixes and misc

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,6 +33,8 @@ devtools::install_github("DanChaltiel/crosstable")
 devtools::install_github("DanChaltiel/crosstableAssistant")
 ```
 
+Of note, it seems that updating packages cause the whole process to fail. In this case, choosing `3: None` when asked for which package to update seems to solve this problem. Otherwise, please [fill an issue](https://github.com/DanChaltiel/crosstableAssistant/issues) describing the error message.
+
 ## Usage
 
 ```{r usage0, eval=FALSE}
